--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,13 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
+    //Room
+    implementation "androidx.room:room-runtime:2.2.6"
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    implementation "androidx.room:room-ktx:2.2.6"
+    implementation 'com.google.android.material:material:1.3.0'
+    kapt "androidx.room:room-compiler:2.2.6"
+
 }
